@@ -1,19 +1,39 @@
 plugins {
+    id 'application'
     id 'java'
 }
-
-group = 'org.example'
+def platform = 'win'
+group = 'org.anton.nea'
 version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
-
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(24)
+    }
 }
 
-test {
-    useJUnitPlatform()
+def javafxVersion = '24.0.2'
+
+dependencies {
+    implementation "org.openjfx:javafx-base:$javafxVersion:$platform"
+    implementation "org.openjfx:javafx-graphics:$javafxVersion:$platform"
+    implementation "org.openjfx:javafx-controls:$javafxVersion:$platform"
+    implementation "org.openjfx:javafx-fxml:$javafxVersion:$platform"
+}
+application {
+    mainClass.set('org.anton.nea.Main')
+    applicationDefaultJvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
